hice que el logo de mercado liebre sea clickeable en html con la etiqueta a y en css modifique el border y background de la barra de busqueda y la lupa

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="heder-section">
             <section class="box-content">
                 <div class="box-header">
-                    <img class="ml-logo" src="./images/logo-mercado-liebre.svg" alt="logo mercado liebre">
+                    <a href="index.html"><img class="ml-logo" src="./images/logo-mercado-liebre.svg" alt="logo mercado liebre"></a>
                 </div>
                 <div class="box-header search">
                     <input class="ml-search" type="search" autofocus placeholder="Buscas productos, marcas ...">
