cree el html del login y del register con sus respectivos css adaptativos

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <li class="nav-item"><a class="nav-link" href="#">Ayuda</a></li>
             </ul>
             <ul class="nav-menu menu-right">
-                <li class="nav-item"><a class="nav-link" href="#">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="./register/register.html">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+                <li class="nav-item"><a class="nav-link" href="./login/login.html">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
             </ul>
         </nav>
@@ -174,31 +174,32 @@
         </section>
     </main>
     <footer class="footer">
-        <section id="pay" class="footer-info">
-            <i class="fa-solid fa-credit-card footer-icon"></i>
-            <p class="titulares">Pagá con tarjeta o en efectivo</p>
-            <p class="text">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos detitulareso. ¡Y siempre es seguro!
-            </p>
-        </section>
-        <section id="shipping" class="footer-info">
-            <i class="fa-solid fa-gift footer-icon"></i>
-            <p class="titulares">Envío gratis desde $ 2.500</p>
-            <p class="text">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.
-            </p>
-        </section>
-        <section id="security" class="footer-info">
-            <i class="fa-solid fa-user-shield footer-icon"></i>
-            <p class="titulares">Seguridad, de principio a fin</p>
-            <p class="text">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.
-            </p>
-        </section>
+        <article class="footer-content">
+            <section id="pay" class="footer-info">
+                <i class="fa-solid fa-credit-card footer-icon"></i>
+                <p class="titulares">Pagá con tarjeta o en efectivo</p>
+                <p class="text">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos detitulareso. ¡Y siempre es seguro!
+                </p>
+            </section>
+            <section id="shipping" class="footer-info">
+                <i class="fa-solid fa-gift footer-icon"></i>
+                <p class="titulares">Envío gratis desde $ 2.500</p>
+                <p class="text">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.
+                </p>
+            </section>
+            <section id="security" class="footer-info">
+                <i class="fa-solid fa-user-shield footer-icon"></i>
+                <p class="titulares">Seguridad, de principio a fin</p>
+                <p class="text">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.
+                </p>
+            </section>
+        </article>
         <section class="copyright-box">
             <p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L</p>
         </section>
     </footer>
 </body>
-
 </html>
