cambie el enviar por un ingresar en el boton del html de login

--- a/login/login.html
+++ b/login/login.html
@@ -49,7 +49,7 @@
         <form>
             <input class="form-to-complete" type="text" name="name" id="name" placeholder="Nombre de usuario">
             <input class="form-to-complete" type="password" name="password" id="password" placeholder="Contraseña">
-            <input class="form-btn-submit" type="submit">
+            <input class="form-btn-submit" type="submit" value="Ingresar">
         </form>
     </main>
     <footer class="footer">
