agregue los label a los input de las secciones intereses y comprar/vender y los acomode con row-reverse en register.css

--- a/register/register.html
+++ b/register/register.html
@@ -80,10 +80,12 @@
                     <p>Perfil del usuario</p>
                     <article>
                         <div class="form-buyer-seller">
-                            <input class="form-to-complete" type="radio" name="buyer-seller"  value="Comprador" required>Comprador
+                            <label for="buyer">Comprador</label>
+                            <input class="form-to-complete" type="radio" name="buyer"  value="Comprador" required>
                         </div>
                         <div class="form-buyer-seller">
-                            <input class="form-to-complete" type="radio" name="buyer-seller" value="Vendedor" required>Vendedor
+                            <label for="seller">Vendedor</label>
+                            <input class="form-to-complete" type="radio" name="seller" value="Vendedor" required>
                         </div>
                     </article>
                 </section>
@@ -92,19 +94,24 @@
                     <p>Intereses</p>
                     <article class="interests">
                         <div class="interests-select">
-                            <input class="form-to-complete" type="checkbox" name="personal-interests" value="Electro">Electro
+                            <label for="electro">Electro</label>
+                            <input class="form-to-complete" type="checkbox" name="electro" value="Electro">
                         </div>
                         <div class="interests-select">
-                            <input class="form-to-complete" type="checkbox" name="personal-interests" value="Moda">Moda
+                            <label for="fashion">Moda</label>
+                            <input class="form-to-complete" type="checkbox" name="fashion" value="Moda">
                         </div>
                         <div class="interests-select">
-                            <input class="form-to-complete" type="checkbox" name="personal-interests" value="Hogar">Hogar
+                            <label for="home">Hogar</label>
+                            <input class="form-to-complete" type="checkbox" name="home" value="Hogar">
                         </div>
                         <div class="interests-select">
-                            <input class="form-to-complete" type="checkbox" name="personal-interests" value="Juguetería">Juguetería
+                            <label for="toy-store">Juguetería</label>
+                            <input class="form-to-complete" type="checkbox" name="toy-store" value="Juguetería">
                         </div>
                         <div class="interests-select">
-                            <input class="form-to-complete" type="checkbox" name="personal-interests" value="Belleza">Belleza
+                            <label for="beauty">Belleza</label>
+                            <input class="form-to-complete" type="checkbox" name="beauty" value="Belleza">
                         </div>
                     </article>
                 </section>
