cambie la nota de buy or seller a buyer or seller, estaba mal escrito

--- a/register/register.html
+++ b/register/register.html
@@ -75,7 +75,7 @@
                     <input class="form-to-complete" type="file" name="profile-photo">
                 </section>
                 <!-- PERFIL DE USUARIO -->
-                <!-- BUY OR SELLER -->
+                <!-- BUYER OR SELLER -->
                 <section>
                     <p>Perfil del usuario</p>
                     <article>
