saque los required de buyer & seller

--- a/register/register.html
+++ b/register/register.html
@@ -81,11 +81,11 @@
                     <article>
                         <div class="form-buyer-seller">
                             <label for="buyer">Comprador</label>
-                            <input class="form-to-complete" type="radio" name="buyer-seller"  value="Comprador"  id="buyer" required>
+                            <input class="form-to-complete" type="radio" name="buyer-seller"  value="Comprador"  id="buyer">
                         </div>
                         <div class="form-buyer-seller">
                             <label for="seller">Vendedor</label>
-                            <input class="form-to-complete" type="radio" name="buyer-seller" value="Vendedor" id="seller" required>
+                            <input class="form-to-complete" type="radio" name="buyer-seller" value="Vendedor" id="seller">
                         </div>
                     </article>
                 </section>
