arregle lo del button submit con active y method

--- a/register/register.html
+++ b/register/register.html
@@ -48,7 +48,7 @@
     <main>
         <fieldset>
             <legend>Datos del usuario</legend>
-            <form id="form">
+            <form id="form" method="post" action="../index.html">
                 <!-- INFO USUARIO: NAME, USER NAME, EMAIL, PASSWORD -->
                 <section class="user-info">
                     <!-- NAME & LASTNAME-->
@@ -118,7 +118,7 @@
                 <!--  RESET AND SUBMIT BUTTONS -->
                 <section class="form-box">
                     <input class="form-btn-rs form-btn-rs--right" type="reset" value="Borrar">
-                    <a href="../index.html" class="to-home"><input class="form-btn-rs" type="submit" value="Enviar"></a>
+                    <input class="form-btn-rs" type="submit" value="Enviar">
                 </section>
             </form>
         </fieldset>
