agregue readme y comprimi las imagenes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- DESCRIPTION -->
+    <meta name="description" content="Encontrá lo que necesitás de la manera más facil y rápida con MercadoLiebre, empresa líder en el mercado ONLINE. Buscás comprar, vender?... MercadoLiebre">
     <title>Mercado Liebre</title>
+    <!-- STYLES -->
     <link rel="stylesheet" href="./style.css">
     <!-- Favicon Mercado Liebre -->
     <link rel="shortcut icon" href="./images/mercado-liebre-hands.png" type="image/x-icon">
